# Calculator

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  SoftwareRequirements.md  StagesOfDevelopment.md  patch.patch  test_all.sh  test_run.sh
_git_cheatsheet/: 01_basics.md  02_branches.md  03_tags_versions.md  04_conventional_commits
cmake/: Dependencies.cmake
include/: AppCalculator.hpp  Calculator.hpp  Menu.hpp  Standard.hpp
include/commands/: BinaryCommand.hpp  Command.hpp  CommandState.hpp  UnaryCommand.hpp
include/commands/arithmetic/: AddCommand.hpp  DivideCommand.hpp  MultiplyCommand.hpp  SqrtCommand.hpp  SubtractCommand.hpp
include/commands/programmer/: BitwiseAndCommand.hpp  BitwiseNotCommand.hpp  BitwiseOrCommand.hpp  BitwiseXorCommand.hpp  ShiftLeftCommand.hpp  ShiftRightCommand.hpp
include/commands/scientific/: CosCommand.hpp  ExpCommand.hpp  LogCommand.hpp  PowCommand.hpp  SinCommand.hpp  TanCommand.hpp
include/data_structures/: MyStack.hpp
include/utils/: NumberConverter.hpp
src/: AppCalculator.cpp  AppCalculator.hpp  CMakeLists.txt  Calculator.cpp  Menu.cpp  Standard.cpp  main.cpp
tests/: CMakeLists.txt  tests_Calculator.cpp  tests_History.cpp  tests_Programmer.cpp  tests_Scientific.cpp  tests_Standard.cpp  tests_Standart.cpp
